# pyvista-gs

./: .gitignore  README.md  control_panel.py  gaussian_actor.py  gaussian_widget.py  gs_widget.py  main.py  main_gs_qt.py  native_actor.py  native_actor_gs.py  notes.txt  pyproject.toml  pyvista_integration.py  renderer_ogl.py  requirements.txt  unified_viewer.py
examples/: vtk_native_sh_broken.py
original/: gaussian_widget.py  renderer_cuda.py  renderer_ogl.py
shaders/: gau_frag_vtk.glsl  gau_geom_vtk.glsl  gau_vert_vtk.glsl
src/: __init__.py  gaussian_widget.py  gs_control_panel.py  gs_widget.py  native_actor_gs.py  native_actor_squares.py  renderer_cuda.py  renderer_ogl.py  renderer_vtk.py  util.py
src/gs_viewer/: actor.py  app.py  renderer.py  utils.py
src/gs_viewer/shaders/: __init__.py  gau_vert.glsl
src/gs_viewer/ui/: control_panel.py
src/pyvista-gs/: data.py
src/pyvista_gs/: __init__.py  actor.py  app.py  renderer.py  utils.py  vtk_native_renderer.py  vtk_proxy.py
src/pyvista_gs/shaders/: __init__.py  gau_frag.glsl  gau_vert.glsl  proxy_frag.glsl  proxy_geom.glsl  proxy_vert.glsl
